package AndreySemeynikov.tasks.read_and_write.storage;

import AndreySemeynikov.tasks.Task;

public class FileSystemSaveStrategy implements SaveStrategy {

    @Override
    public void save(Task task) {

    }
}
