@startuml
class AndreySemeynikov.tasks.read_and_write.storage.FileSystemSaveStrategy {
+ void save(Task)
}
class AndreySemeynikov.tasks.read_and_write.strategies.JsonTaskSerializer {
- {static} Gson gson
+ String serializeTask(Task)
+ Task deserializeTask(String)
}
class AndreySemeynikov.tasks.read_and_write.TaskFileManager {
- TaskSerializerStrategy taskSerializerStrategy
+ void saveTaskToFile(Task,Path,String)
+ Task loadTaskFromFile(Path,String)
}
class AndreySemeynikov.tasks.read_and_write.strategies.XMLTaskSerializer {
+ String serializeTask(Task)
+ Task deserializeTask(String)
}
class AndreySemeynikov.util.LocalDateAdapterJson {
- {static} DateTimeFormatter formatter
+ JsonElement serialize(LocalDate,Type,JsonSerializationContext)
+ LocalDate deserialize(JsonElement,Type,JsonDeserializationContext)
}
class AndreySemeynikov.Main {
+ {static} void main(String[])
}
enum AndreySemeynikov.tasks.TaskStatus {
+  ACTIVE
+  COMPLETED
+  OVERDUE
- String status
+ String toString()
}
class AndreySemeynikov.tasks.read_and_write.storage.SaveManager {
- SaveStrategy saveStrategy
+ void setSaveStrategy(SaveStrategy)
+ void save(Task)
}
interface AndreySemeynikov.tasks.read_and_write.storage.SaveStrategy {
~ void save(Task)
}
interface AndreySemeynikov.tasks.read_and_write.strategies.TaskSerializerStrategy {
~ String serializeTask(Task)
~ Task deserializeTask(String)
}
class AndreySemeynikov.ui.ConsoleUI {
- BufferedReader reader
- TaskFileManager taskFileManager
- List<Task> taskList
+ void start()
- void loadTasksFromFiles()
- Path openDirectory()
- String chooseFormatOfFile()
- void saveTasksToFiles()
- void displayAllTasks()
- void printMenu()
- void printFormatOfFile()
- int readUserChoice()
- void addTask()
- void addTaskFromFile()
}
class AndreySemeynikov.tasks.Task {
- {static} AtomicLong idGenerator
- long id
- String title
- String description
- LocalDate startDate
- LocalDate dueDate
- TaskStatus status
- List<String> attachedFiles
+ String getTitle()
+ void setTitle(String)
+ String getDescription()
+ void setDescription(String)
+ LocalDate getStartDate()
+ void setStartDate(LocalDate)
+ LocalDate getDueDate()
+ void setDueDate(LocalDate)
+ TaskStatus getStatus()
+ void setStatus(TaskStatus)
+ List<String> getAttachedFiles()
+ void setAttachedFiles(List<String>)
+ void addAttachedFile(String)
+ void removeAttachedFile(String)
+ long getId()
+ {static} long generateId()
+ String toString()
}
class AndreySemeynikov.util.LocalDateAdapterXML {
- {static} DateTimeFormatter formatter
+ LocalDate unmarshal(String)
+ String marshal(LocalDate)
}


AndreySemeynikov.tasks.read_and_write.storage.SaveStrategy <|.. AndreySemeynikov.tasks.read_and_write.storage.FileSystemSaveStrategy
AndreySemeynikov.tasks.read_and_write.strategies.TaskSerializerStrategy <|.. AndreySemeynikov.tasks.read_and_write.strategies.JsonTaskSerializer
AndreySemeynikov.tasks.read_and_write.strategies.TaskSerializerStrategy <|.. AndreySemeynikov.tasks.read_and_write.strategies.XMLTaskSerializer
AndreySemeynikov.util.JsonSerializer <|.. AndreySemeynikov.util.LocalDateAdapterJson
AndreySemeynikov.util.JsonDeserializer <|.. AndreySemeynikov.util.LocalDateAdapterJson
jakarta.xml.bind.annotation.adapters.XmlAdapter <|-- AndreySemeynikov.util.LocalDateAdapterXML
@enduml